--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -20,7 +20,7 @@
       <div>
         <div class=" input-box-form">
           <label class="mb-8">Rol</label>
-          <select class="form-select">
+          <select class="form-select select-new-user">
             <option>Admin</option>
             <option>Monitoreo</option>
           </select>
