--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -73,6 +73,11 @@
     }
 }
 
+
+.select-new-user{
+    width: 250px;
+}
+
 .form-select-table {
     border: 1px solid $gray-35;
     box-sizing: border-box;
