--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- <app-new-password></app-new-password> -->
 <!-- <app-list-users></app-list-users> -->
 <!-- <app-edit-users></app-edit-users> -->
-<!-- <app-dashboard></app-dashboard> -->
+<app-dashboard></app-dashboard>
 <!-- <app-comprobantes></app-comprobantes> -->
 <!-- <app-config-system></app-config-system> -->
-<app-new-user></app-new-user>
+<!-- <app-new-user></app-new-user> -->
