--- a/src/app/comprobantes/comprobantes.component.html
+++ b/src/app/comprobantes/comprobantes.component.html
@@ -7,10 +7,15 @@
     <span class="text-center"><img src="assets/images/user.svg" alt="user"></span>
     <span class="pointer"><img src="assets/images/menu-dot.svg" alt="menu"></span>
   </div>
+
   <!-- navbar Menu Option -->
   <!-- <div class="box-menu-option pointer">
-          <div ><i class="icon-close pr-16"></i>Cerrar Sesión</div>
-      </div> -->
+  <div class="pl-8 pr-8 pt-8 link-menu "><img class="pr-8" src="assets/images/tools.svg" alt="">Administrar Usuarios
+  </div>
+  <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/dash-icon.svg" alt="">Dashboard</div>
+  <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/key.svg" alt="">Cambiar contraseña</div>
+  <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/logout.svg" alt="">Cerrar Sesión</div>
+</div> -->
 </header>
 <section class="">
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle-xlarge  text-left">
@@ -43,7 +48,7 @@
 
 
   </div>
-  <div >
+  <div>
     <div class="d-flex ml-24 mr-24">
       <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Fecha:</p>
       <input class="gray-40-text filter-date" type="date" name="" id="">
@@ -69,30 +74,30 @@
   </div>
 </section>
 <section>
-    <div class="container-table pl-24 pr-24">
-        <table>
-          <tr>
-            <th>Tipo</th>
-            <th>N° Comprobante</th>
-            <th>RUC</th>
-            <th>Fecha</th>
-            <th>Monto</th>
-            <th>Estado de cuadratura</th>
-            <th>Estado Sunat</th>
-          </tr>
-          <tbody>
-            <tr>
-              <td>Lorem</td>
-              <td>12342222</td>
-              <td>203435432</td>
-              <td>23/03/2021</td>
-              <td>S/ 300</td>
-              <td>Lorem</td>
-              <td>Lipsus</td>
-            </tr>
-    
-    
-          </tbody>
-        </table>
-      </div>
+  <div class="container-table pl-24 pr-24">
+    <table>
+      <tr>
+        <th>Tipo</th>
+        <th>N° Comprobante</th>
+        <th>RUC</th>
+        <th>Fecha</th>
+        <th>Monto</th>
+        <th>Estado de cuadratura</th>
+        <th>Estado Sunat</th>
+      </tr>
+      <tbody>
+        <tr>
+          <td>Lorem</td>
+          <td>12342222</td>
+          <td>203435432</td>
+          <td>23/03/2021</td>
+          <td>S/ 300</td>
+          <td>Lorem</td>
+          <td>Lipsus</td>
+        </tr>
+
+
+      </tbody>
+    </table>
+  </div>
 </section>
