--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -9,8 +9,12 @@
   </div>
   <!-- navbar Menu Option -->
   <!-- <div class="box-menu-option pointer">
-        <div ><i class="icon-close pr-16"></i>Cerrar Sesión</div>
-    </div> -->
+    <div class="pl-8 pr-8 pt-8 link-menu "><img class="pr-8" src="assets/images/tools.svg" alt="">Administrar Usuarios
+    </div>
+    <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/dash-icon.svg" alt="">Dashboard</div>
+    <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/key.svg" alt="">Cambiar contraseña</div>
+    <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/logout.svg" alt="">Cerrar Sesión</div>
+  </div> -->
 </header>
 <section class="">
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle text-left">
