--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -210,6 +210,7 @@
 .container-modal{
   width: 100%;
   height: 100vh;
+  background: rgba(128, 128, 128, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
