--- a/src/sass/theme/_fonts.scss
+++ b/src/sass/theme/_fonts.scss
@@ -108,3 +108,10 @@
         text-align: left;
     }
 }
+.link-menu{
+    transition: .5s;
+    &:hover{
+        color: $dark-red-fp;
+        text-decoration: underline;
+    }
+}
