--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div>
-        <div class="input-box-form mt-16">
+        <div class="input-box-form ">
           <label class="mb-8">Actual Contraseña</label>
           <input class="input-text" type="password">
           <!-- <div>
@@ -53,6 +53,14 @@
                     
                   </div>
               </div> -->
+                 <div>
+                  <div class="text-center">
+                    <div class="ml-24 pt-16">
+                      <a class="red-text text-back mb-0 mt-0 pointer"> Regresar <img class="pr-8 icon-back" src="assets/images/back-red.svg" alt=""></a>
+                    </div>
+                    
+                  </div>
+              </div>
       </div>
 
     </form>
