--- a/src/app/config-system/config-system.component.html
+++ b/src/app/config-system/config-system.component.html
@@ -13,12 +13,13 @@
     </div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/dash-icon.svg" alt="">Dashboard</div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/key.svg" alt="">Cambiar contraseña</div>
+   <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/config.svg" alt="">Ajuste de Sistema</div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/logout.svg" alt="">Cerrar Sesión</div>
   </div> -->
 </header>
 <section>
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle-medium text-left">
-    <p> Ajuste de Sistema</p>
+    <p><img class="pr-8" src="assets/images/icon-config.svg" alt=""> Ajuste de Sistema</p>
 
   </div>
   <div class="pr-1 pl-1 mt-24">
