--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -13,12 +13,13 @@
     </div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/dash-icon.svg" alt="">Dashboard</div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/key.svg" alt="">Cambiar contraseña</div>
+    <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/config.svg" alt="">Ajuste de Sistema</div>
     <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/logout.svg" alt="">Cerrar Sesión</div>
   </div> -->
 </header>
 <section class="">
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle text-left">
-    <p> Usuarios</p>
+    <p><img class="pr-8"  src="assets/images/user-list.svg" alt="">  Usuarios</p>
 
   </div>
   <div class="content-buttons pr-24 pl-24">
