--- a/src/sass/theme/_fonts.scss
+++ b/src/sass/theme/_fonts.scss
@@ -23,6 +23,11 @@
     font-size: 18px;
 }
 
+.text-back{
+    font-family: $omnes-regular;
+    font-size: 18px;
+}
+
 .text-body--sb16 {
     color: $gray-40;
     font-family: $omnes-semibold;
