--- a/src/app/comprobantes/comprobantes.component.html
+++ b/src/app/comprobantes/comprobantes.component.html
@@ -14,12 +14,16 @@
   </div>
   <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/dash-icon.svg" alt="">Dashboard</div>
   <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/key.svg" alt="">Cambiar contraseña</div>
+  <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/config.svg" alt="">Ajuste de Sistema</div>
   <div class="pl-8 pr-8 pt-16 link-menu"><img class="pr-8" src="assets/images/logout.svg" alt="">Cerrar Sesión</div>
 </div> -->
 </header>
 <section class="">
+  <div class="ml-24 pt-24">
+    <a class="green-text text-back mb-0 mt-0 pointer"><img class="pr-8 icon-back" src="assets/images/back-green.svg" alt=""> Regresar</a>
+  </div>
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle-xlarge  text-left">
-    <p> Relación de Comprobantes</p>
+    <p><img class="pl-8 pr-8" src="assets/images/bill.svg" alt="">  Relación de Comprobantes</p>
 
   </div>
   <div class="grid-menu-comprobante pr-24 pl-24">
