--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- <app-login></app-login> -->
 <!-- <app-change-password></app-change-password> -->
-<app-list-users></app-list-users>
+<!-- <app-list-users></app-list-users> -->
 <!-- <app-edit-users></app-edit-users> -->
-<!-- <app-dashboard></app-dashboard> -->
+<app-dashboard></app-dashboard>
 <!-- <app-comprobantes></app-comprobantes> -->
 <!-- <app-config-system></app-config-system> -->
 <!-- <app-new-user></app-new-user> -->
