--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -20,7 +20,7 @@
             </div>
           </div> -->
         </div>
-        <div class="input-box-form mt-16">
+        <div class="input-box-form mt-8">
           <label class="mb-8">Nueva Contraseña</label>
           <input class="input-text" type="password">
           <!-- <div>
@@ -29,7 +29,7 @@
             </div>
           </div> -->
         </div>
-        <div class="input-box-form mt-16">
+        <div class="input-box-form mt-8">
           <label class="mb-8">Confirmar Nueva Contraseña</label>
           <input class="input-text" type="password">
           <!-- <div>
@@ -48,19 +48,20 @@
 
         </div>
         <!-- <div>
-                  <div class="text-center">
-                      <button class="button btn-inactive">Guardar Cambios</button>
-                    
-                  </div>
-              </div> -->
-                 <div>
-                  <div class="text-center">
-                    <div class="ml-24 pt-16">
-                      <a class="red-text text-back mb-0 mt-0 pointer"> Regresar <img class="pr-8 icon-back" src="assets/images/back-red.svg" alt=""></a>
-                    </div>
-                    
-                  </div>
-              </div>
+          <div class="text-center">
+            <button class="button btn-inactive">Guardar Cambios</button>
+
+          </div>
+        </div> -->
+        <div>
+          <div class="text-center">
+            <div class=" pt-16">
+              <a class="red-text link-style text-back mb-0 mt-0 pointer"> Regresar <img class="pl-8 icon-back"
+                  src="assets/images/back-red.svg" alt=""></a>
+            </div>
+
+          </div>
+        </div>
       </div>
 
     </form>
