--- a/src/app/config-system/config-system.component.html
+++ b/src/app/config-system/config-system.component.html
@@ -22,7 +22,7 @@
     <p><img class="pr-8" src="assets/images/icon-config.svg" alt=""> Ajuste de Sistema</p>
 
   </div>
-  <div class="pr-1 pl-1 mt-24">
+  <div class="px-3 pl-1 mt-24">
     <button class="button btn-primary-green button-search"><span><img class="icon-btn"
           src="assets/images/save-white.svg" alt=""></span> <span>Guardar</span></button>
   </div>
