--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <section class="bg-login">
   <section class="grid-login ">
-    <div class="pl-24 text-center ">
+    <div class="pl-24 text-center container-img-login">
       <img class="login-img" src="assets/images/farmacias-peruanas.png" alt="logo">
 
     </div>
@@ -15,38 +15,38 @@
           <label class="mb-8">DNI o código de empleado</label>
           <input class="input-text" type="text">
           <!-- <div>
-                        <div class="required-message">
-                            El usuario es <strong>requerido</strong>
-                        </div>
-                    </div> -->
+            <div class="required-message">
+              El usuario es <strong>requerido</strong>
+            </div>
+          </div> -->
         </div>
 
         <div class="input-box-form mt-16">
           <label class="mb-8">Contraseña</label>
           <input class="input-text" type="password">
           <!-- <div>
-                        <div class="required-message" >
-                            La contraseña es <strong>requerida</strong>
-                        </div>
-                    </div> -->
+            <div class="required-message">
+              La contraseña es <strong>requerida</strong>
+            </div>
+          </div> -->
         </div>
       </div>
 
-    
+
 
       <div>
         <div class="text-center">
           <button class="button btn-primary-red">Ingresar <img src="assets/images/right.svg" alt=""></button>
 
         </div>
-          <!-- <div>
-                <div class="text-center">
-                    <button class="button btn-inactive">Ingresar</button>
-                  
-                </div>
-            </div> -->
+        <!-- <div>
+          <div class="text-center">
+            <button class="button btn-inactive">Ingresar</button>
+
+          </div>
+        </div> -->
       </div>
-    
+
     </form>
 
   </section>
