--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,5 +1,5 @@
 <section class="container-modal">
-  <div class="modal-content">
+  <div class="modal-content-new">
     <div class="text-right "><img class="pointer" src="assets/images/exit.svg" alt="exit"></div>
     <div>
       <p class="text-title--24 mt-0  red-text">Nuevo Usuario</p>
