--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,5 @@
 @import "sass/components/pictures";
 @import "sass/components/container";
 @import "sass/components/table";
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
