--- a/src/app/comprobantes/comprobantes.component.html
+++ b/src/app/comprobantes/comprobantes.component.html
@@ -20,7 +20,7 @@
 </header>
 <section class="">
   <div class="ml-24 pt-24">
-    <a class="green-text text-back mb-0 mt-0 pointer"><img class="pr-8 icon-back" src="assets/images/back-green.svg" alt=""> Regresar</a>
+    <a class=" link-back green-text text-back mb-0 mt-0 pointer"><img class="pr-8 icon-back" src="assets/images/back-green.svg" alt=""> Regresar</a>
   </div>
   <div class="title-section text-title--24  red-text mt-24 mb-24 line-subtitle-xlarge  text-left">
     <p><img class="pl-8 pr-8" src="assets/images/bill.svg" alt="">  Relación de Comprobantes</p>
@@ -32,7 +32,7 @@
       <p class="green-text text-title--comprobantes mb-8 mt-0">Farmacias Peruanas</p>
       <p class="gray-40-text mt-0"> <span class="text-body--sb16--g10 ">RUC</span> : 20345454321</p>
     </div>
-    <div class="pr-24 grid-btn-export">
+    <div class=" grid-btn-export">
       <button class="button btn-primary-green button-search"><img class="icon-btn" src="assets/images/export.svg"
           alt="export">
         Exportar datos</button>
@@ -42,7 +42,7 @@
 </section>
 <section class="grid-option-filter mt-24">
   <div class="d-flex ml-24 mr-24">
-    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Tipo de Comprobantes</p>
+    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Tipo de Comprobantes</p>
     <div>
       <select class="form-select">
         <option>Todas</option>
@@ -53,13 +53,13 @@
 
   </div>
   <div>
-    <div class="d-flex ml-24 mr-24">
-      <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Fecha:</p>
+    <div class="d-flex align-items-center ml-24 mr-24">
+      <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Fecha:</p>
       <input class="gray-40-text filter-date" type="date" name="" id="">
     </div>
   </div>
-  <div class="d-flex ml-24 mr-24">
-    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Estado Sunat:</p>
+  <div class="d-flex align-items-center ml-24 mr-24">
+    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Estado Sunat:</p>
     <div>
       <select class="form-select">
         <option>Todas</option>
@@ -67,8 +67,8 @@
       </select>
     </div>
   </div>
-  <div class="d-flex ml-24 mr-24">
-    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Estado Cuadratura:</p>
+  <div class="d-flex  align-items-center ml-24 mr-24">
+    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Estado Cuadratura:</p>
     <div>
       <select class="form-select">
         <option>Todas</option>
