--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,15 +22,15 @@
     <p> <img class="pos-icon-dash" src="assets/images/icon-dash.svg" alt="Dashboard"> Dashboard</p>
 
   </div>
-  <div class="pr-1 pl-1">
+  <div class="px-3 ">
     <div class="filter-container ">
-      <div class="d-flex mr-24">
-        <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Compañia :</p>
+      <div class="d-flex align-items-center  mr-24">
+        <p class="title-filter text-body--sb16--g10 gray-40-text mb-0 mr-24">Compañia :</p>
 
         <div class="form-control-select input-home ">
 
           <select class="form-select">
-            <option>Laboratorio Pruebas</option>
+            <option>Laboratorio Pruebas de capsulas</option>
             <option>Laboratorio Pruebas  2</option>
 
 
@@ -38,8 +38,8 @@
         </div>
       </div>
 
-      <div class="d-flex ml-24 mr-24">
-        <p class="title-filter text-body--sb16--g10 gray-40-text mr-24">Fecha :</p>
+      <div class="d-flex  align-items-center ml-24 mr-24">
+        <p class="title-filter text-body--sb16--g10 gray-40-text mb-0 mr-24">Fecha :</p>
         <input class="gray-40-text filter-date" type="date" name="" id="">
       </div>
       <div class="ml-24">
