--- a/src/app/edit-users/edit-users.component.html
+++ b/src/app/edit-users/edit-users.component.html
@@ -19,7 +19,7 @@
 </header>
 <section class="">
   <div class="ml-24 pt-24">
-    <a class="green-text text-back mb-0 mt-0 pointer"><img class="pr-8 icon-back" src="assets/images/back-green.svg" alt=""> Regresar</a>
+    <a class="green-text link-back text-back mb-0 mt-0 pointer"><img class="pr-8 icon-back" src="assets/images/back-green.svg" alt=""> Regresar</a>
   </div>
   <div class="title-section text-title--24 red-text mt-24 mb-24 line-subtitle-large text-left">
     <p><img class="pr-8" src="assets/images/edit-user.svg" alt="edit"> Editar Usuarios</p>
