--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -59,7 +59,7 @@
     box-sizing: border-box;
     border-radius: 8px;
     height: 48px;
-    width: 145px;
+    width: 170px;
    
     color: $gray-35;
     padding-left: 5px;
@@ -221,4 +221,5 @@ input:checked[type="checkbox"]::before {
         color: $gray-35 !important;
         font-family: $omnes-regular;
         font-size: 14px;
+        height: 48px;
 }
