--- a/src/app/edit-users/edit-users.component.html
+++ b/src/app/edit-users/edit-users.component.html
@@ -70,11 +70,12 @@
          
             <td>123456789</td>
   
-            <td class="text-center d-flex">
+            <td class="text-center d-flex align-items-center">
               <div><img class="pointer" src="assets/images/save.svg" alt="save"></div>
               <div>
                 <img class="pointer pl-24" src="assets/images/trash.svg" alt="delete">
               </div>
+              <div><img class="pointer pl-24" src="assets/images/cancel.svg" alt="cancel"></div>
             </td>
   
   
