--- a/src/sass/components/_table.scss
+++ b/src/sass/components/_table.scss
@@ -8,10 +8,11 @@ table {
     width: 100%;
     margin-top: 3em;
     color: $gray-40;
+    font-size: 14px;
     border-collapse: collapse;
     th,
     td {
-        border-bottom: 1px solid $gray-10;
+        
         padding: 10px;
         text-align: center;
     }
@@ -21,5 +22,8 @@ table {
     }
     td {
         text-align: left;
+    }
+    tr {
+        border-bottom: 1px solid $gray-10;
     }
 }
