--- a/src/app/comprobantes/comprobantes.component.html
+++ b/src/app/comprobantes/comprobantes.component.html
@@ -8,7 +8,7 @@
     <span class="pointer"><img src="assets/images/menu-dot.svg" alt="menu"></span>
   </div>
 
-  <!-- navbar Menu Option -->
+  <!-- Navbar Menu Option -->
   <!-- <div class="box-menu-option pointer">
   <div class="pl-8 pr-8 pt-8 link-menu "><img class="pr-8" src="assets/images/tools.svg" alt="">Administrar Usuarios
   </div>
@@ -29,7 +29,7 @@
   <div class="grid-menu-comprobante pr-24 pl-24">
 
     <div>
-      <p class="green-text text-title--comprobantes mb-8 mt-0">Farmacias Peruanas</p>
+      <p class="green-text text-title--comprobantes mb-0 mt-0">Farmacias Peruanas</p>
       <p class="gray-40-text mt-0"> <span class="text-body--sb16--g10 ">RUC</span> : 20345454321</p>
     </div>
     <div class=" grid-btn-export">
@@ -41,10 +41,10 @@
   </div>
 </section>
 <section class="grid-option-filter mt-24">
-  <div class="d-flex ml-24 mr-24">
+  <div class="d-flex  mr-24">
     <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Tipo de Comprobantes</p>
     <div>
-      <select class="form-select">
+      <select class="form-select form-select-comprobante">
         <option>Todas</option>
         <option>Rechazadas</option>
       </select>
@@ -61,7 +61,7 @@
   <div class="d-flex align-items-center ml-24 mr-24">
     <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Estado Sunat:</p>
     <div>
-      <select class="form-select">
+      <select class=" form-select form-select-comprobante">
         <option>Todas</option>
         <option>Rechazadas</option>
       </select>
@@ -70,11 +70,14 @@
   <div class="d-flex  align-items-center ml-24 mr-24">
     <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Estado Cuadratura:</p>
     <div>
-      <select class="form-select">
+      <select class="form-select form-select-comprobante">
         <option>Todas</option>
         <option>Rechazadas</option>
       </select>
     </div>
+  </div>
+  <div class="ml-24">
+    <button class="button button-filter btn-primary-red">Filtrar</button>
   </div>
 </section>
 <section>
