--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -56,11 +56,10 @@
 
 .form-select {
     border: 1px solid $gray-35;
-    box-sizing: border-box;
+    box-sizing: content-box;
     border-radius: 8px;
     height: 48px;
-    width: 170px;
-   
+    width: 230px;
     color: $gray-35;
     padding-left: 5px;
     font-family: $omnes-regular;
@@ -71,6 +70,10 @@
         border-radius: 8px;
         outline: none;
     }
+}
+
+.form-select-comprobante{
+    width: 140px;
 }
 
 
@@ -215,11 +218,12 @@ input:checked[type="checkbox"]::before {
 
 .filter-date{
     border: 1px solid $gray-35;
-        box-sizing: border-box;
+    box-sizing: content-box;
         border-radius: 8px;
         padding-left: 10px;
         color: $gray-35 !important;
         font-family: $omnes-regular;
         font-size: 14px;
         height: 48px;
+        width: 167px;
 }
