--- a/src/app/config-system/config-system.component.html
+++ b/src/app/config-system/config-system.component.html
@@ -22,12 +22,20 @@
     <p><img class="pr-8" src="assets/images/icon-config.svg" alt=""> Ajuste de Sistema</p>
 
   </div>
-  <div class="px-3 pl-1 mt-24">
+
+<div class="d-flex align-items-center justify-content-between ps-3 px-3">
+  <div class="d-flex align-items-center  mr-24 input-box-form ">
+    <p class="title-filter text-body--sb16--g10 gray-40-text mr-24 mb-0">Buscar</p>
+    <input class="input-text" type="text">
+  </div>
+  <div class=" pl-1 ">
     <button class="button btn-primary-green button-search"><span><img class="icon-btn"
           src="assets/images/save-white.svg" alt=""></span> <span>Guardar</span></button>
   </div>
+</div>
+ 
   <div>
-    <div class="container-table pl-24 pr-24">
+    <div class="container-table ps-3 px-3">
       <table>
         <tr>
           <th>Clave</th>
