--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -213,8 +213,10 @@
   box-shadow: 0px 4px 4px rgba(125, 128, 130, 0.15);
   border-radius: 16px;
   display: flex;
-  width: 780px;
+  width: 1000px;
   padding: 1em;
+
+  box-sizing: content-box;
 }
 
 .card-companies {
@@ -242,10 +244,25 @@
   width: 70%;
 }
 
-.modal-content-new{
+.modal-content-new {
   width: 875px;
   box-shadow: 0px 4px 4px rgba(218, 201, 193, 0.5);
   border-radius: 16px;
   padding: 2em;
   background-color: #fff;
+}
+
+.circle-pop {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: $dark-red-fp;
+  color: #fff;
+  font-size: 11px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -3px;
+  right: -10px;
+
 }
